[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI/Conf/Configuracion.gd" type="Script" id=1]
[ext_resource path="res://temas/inGameUITheme.tres" type="Theme" id=2]
[ext_resource path="res://objetos/UI/Conf/MasterSllider.tscn" type="PackedScene" id=3]
[ext_resource path="res://objetos/UI/Conf/FXSlider.tscn" type="PackedScene" id=4]
[ext_resource path="res://objetos/UI/Conf/MusicSlider.tscn" type="PackedScene" id=5]

[node name="Configuracion" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.00392157, 0.0313726, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="touchScreenButtonsCheck" type="CheckButton" parent="ColorRect/VBoxContainer"]
margin_left = 503.0
margin_top = 187.0
margin_right = 776.0
margin_bottom = 232.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Touch Controls"
align = 1

[node name="gamepadControlCheck" type="CheckButton" parent="ColorRect/VBoxContainer"]
margin_left = 476.0
margin_top = 236.0
margin_right = 804.0
margin_bottom = 281.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Gamepad Controls"
align = 1

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
margin_left = 599.0
margin_top = 285.0
margin_right = 680.0
margin_bottom = 362.0
size_flags_horizontal = 4
size_flags_vertical = 1
theme = ExtResource( 2 )
text = "Sound
"

[node name="MasterContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_left = 240.0
margin_top = 366.0
margin_right = 1040.0
margin_bottom = 403.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/MasterContainer"]
margin_right = 90.0
margin_bottom = 37.0
rect_min_size = Vector2( 90, 0 )
theme = ExtResource( 2 )
text = "Master"

[node name="MasterSllider" parent="ColorRect/VBoxContainer/MasterContainer" instance=ExtResource( 3 )]

[node name="FxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_left = 240.0
margin_top = 407.0
margin_right = 1040.0
margin_bottom = 444.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/FxContainer"]
margin_right = 90.0
margin_bottom = 37.0
rect_min_size = Vector2( 90, 0 )
theme = ExtResource( 2 )
text = "FX"

[node name="FXSlider" parent="ColorRect/VBoxContainer/FxContainer" instance=ExtResource( 4 )]

[node name="MusicContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_left = 240.0
margin_top = 448.0
margin_right = 1040.0
margin_bottom = 485.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/MusicContainer"]
margin_right = 90.0
margin_bottom = 37.0
rect_min_size = Vector2( 90, 0 )
theme = ExtResource( 2 )
text = "Music"

[node name="MusicSlider" parent="ColorRect/VBoxContainer/MusicContainer" instance=ExtResource( 5 )]

[node name="BAckButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_left = 603.0
margin_top = 489.0
margin_right = 677.0
margin_bottom = 532.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "Back"
flat = true
[connection signal="toggled" from="ColorRect/VBoxContainer/touchScreenButtonsCheck" to="." method="_on_touchScreenButtonsCheck_toggled"]
[connection signal="toggled" from="ColorRect/VBoxContainer/gamepadControlCheck" to="." method="_on_gamepadControlCheck_toggled"]
[connection signal="button_down" from="ColorRect/VBoxContainer/BAckButton" to="." method="go_back"]
[connection signal="button_down" from="ColorRect/VBoxContainer/BAckButton" to="." method="save_settings"]
